updates on header. working on overflow bugs

--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -1,21 +1,46 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding:0;
+  }
+
 .nav-bar {
-    display: inline-block;
-    background: #32936F;
+    display:flex;
+    background: #f54242;
     width: 100%;
-    height: 7%;
-    position: absolute;
+    height: 70px;
+    // position: relative;
     top: 0;
     z-index: 3;
-    min-width: 500px;
+    min-width: 100%;
     opacity: 0.8;
 
 
-    .logo {
-        display: inline-block;
-        margin-top: 30px;
-        margin-right: 90%;
-        width: 50px;
-        height: auto;
+    .parent {
+        border: solid blue 5px;
+        width: calc(100% - 20px);
+        height: 70px;
+        /* Aligns the children items in a row direction */
+        display: flex;
+        // position: relative;
+        
+    }
+    .profileLogo {
+        // position: absolute;
+        border: solid yellow 5px;
+        width: 100px;
+        height: 100px;
+        display: flex;
+
+    }
+
+    .settingsLogo {
+        // position: absolute;
+        border: solid green 5px;
+        width: 100px;
+        height: 100px;
+        display: flex;
+        margin-left: 800px;
 
     }
 
